--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,3 +10,8 @@
 .shadow-cyan {
     box-shadow: 0 4px 20px rgba(6, 182, 212, 0.5); 
 }
+.custom-modal {
+    .ant-modal-content {
+        background: linear-gradient(to bottom, #fef6f5, #ecf5fe, #edf6fe);
+    }
+}
