--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -95,7 +95,8 @@
             gap: 20px;
 
             .message-image img {
-                width: 100%;
+                height: 200%;
+                width: 80%;
                 max-width: 500px;
                 border-radius: 10px;
             }
