--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -95,10 +95,11 @@
             gap: 20px;
 
             .message-image img {
-                height: 200%;
-                width: 80%;
-                max-width: 500px;
+                width: 500px;
+                // max-width: 500px;
+                height: 400px;
                 border-radius: 10px;
+                // object-fit: cover;
             }
 
             .message-form {
